<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.example.progfront.RegisterActivity">

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextEmail"
        android:layout_marginBottom="16dp"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextPassword"
        android:layout_marginBottom="16dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:autofillHints="newPassword" />

    <EditText
        android:id="@+id/editTextPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="16dp"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:autofillHints="newPassword" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPasswordConfirm"
        android:layout_marginTop="16dp"
        android:text="@string/register_button_text" />

</RelativeLayout>
