<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profile_username_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/inputDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profile_description_hint"
        android:inputType="textCapSentences|textMultiLine"
        android:minLines="2"
        android:gravity="top"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/buttonChangePhotoDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/profile_image_change" />
</LinearLayout>
