<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/inputLoggedTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/schedule_logged_time_hint" />
        <EditText
            android:id="@+id/inputNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/schedule_notes_hint"
            android:inputType="textCapSentences|textMultiLine"
            android:minLines="2"
            android:gravity="top"
            android:layout_marginTop="8dp" />
        <CheckBox
            android:id="@+id/checkCompleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_completed_checkbox"
            android:layout_marginTop="8dp" />
    </LinearLayout>
</ScrollView>

